# vibegram

./: .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  LICENSE  README.md  build.sh  install-deps.sh
app/vibegram/: main.cpp
cmake/: uninstall.cmake.in
include/: llm_client.h  watcher.h
include/vibegram/: llm_client.h  watcher.h
prompts/: transpile.md
scripts/: build.sh  demo.sh  test.sh
src/: llm_client.cpp  main.cpp  watcher.cpp
src/lib/: llm_client.cpp  watcher.cpp
tests/: CMakeLists.txt  llm_client_test.cpp  watcher_test.cpp
